# rust-bitcoin

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  justfile  rbmt-version
.github/actions/setup-rbmt/: action.yml
.github/workflows/: README.md  cron-daily-fuzz.yml  cron-daily-update-nightly.yml  rust.yml
addresses/: Cargo.toml
addresses/src/: lib.rs
addresses/src/address/: error.rs  mod.rs
base58/: Cargo.toml  README.md
bip158/src/: lib.rs
bitcoin/: Cargo.toml  build.rs
bitcoin/embedded/src/: main.rs
bitcoin/src/: bip152.rs  bip32.rs  internal_macros.rs  lib.rs  pow.rs  sign_message.rs
bitcoin/src/address/: mod.rs
bitcoin/src/blockdata/: block.rs  constants.rs  transaction.rs  witness.rs
bitcoin/src/blockdata/locktime/: absolute.rs
bitcoin/src/blockdata/script/: mod.rs  owned.rs  push_bytes.rs  witness_program.rs
bitcoin/src/consensus/: encode.rs
bitcoin/src/crypto/: key.rs  sighash.rs
bitcoin/src/merkle_tree/: block.rs  mod.rs
bitcoin/src/network/: mod.rs  params.rs
bitcoin/src/p2p/: address.rs  message.rs  message_blockdata.rs  message_bloom.rs  message_compact_blocks.rs  message_filter.rs  message_network.rs  mod.rs
bitcoin/src/psbt/: serialize.rs
bitcoin/src/psbt/map/: input.rs  mod.rs
bitcoin/src/taproot/: merkle_branch.rs  mod.rs
bitcoin/src/taproot/merkle_branch/: mod.rs
bitcoin/tests/: psbt-sign-taproot.rs
consensus_encoding/: CHANGELOG.md  Cargo.toml  README.md
consensus_encoding/examples/: encoder.rs
consensus_encoding/src/: lib.rs
consensus_encoding/src/decode/: decoders.rs
consensus_encoding/tests/: api.rs  compact_size.rs  composition.rs  decode.rs  encode.rs  iter.rs  wrappers.rs
consensus_encoding/tests/rust_v_1_65/: api.rs  decode.rs
crypto/src/: lib.rs
docs/: crates.md
fuzz/: Cargo.toml  fuzz.sh  generate-files.sh
fuzz/fuzz_targets/bitcoin/: compare_consensus_encoding.rs  deserialize_psbt.rs  deserialize_script.rs
fuzz/src/: lib.rs
hashes/: Cargo.toml  README.md
hashes/src/: hmac.rs  internal_macros.rs  lib.rs  sha256t.rs
internals/: Cargo.toml  build.rs
internals-0.5.0/: Cargo.toml
internals/src/: array_vec.rs  const_tools.rs  slice.rs
io/: CHANGELOG.md  Cargo.toml
io/src/: hash.rs  lib.rs
keys/: Cargo.toml  README.md
keys/src/: lib.rs
network/: CHANGELOG.md  Cargo.toml  README.md
network/src/: lib.rs
primitives/: CHANGELOG.md
primitives/src/: lib.rs  merkle_tree.rs  taproot.rs  transaction.rs  witness.rs
primitives/src/hash_types/: block_hash.rs  ntxid.rs  txid.rs  witness_commitment.rs  wtxid.rs
primitives/src/locktime/: relative.rs
primitives/src/script/: mod.rs  push_bytes.rs  witness_program.rs  witness_version.rs
primitives/src/taproot/: mod.rs
units/: Cargo.toml  README.md
units/src/: amount.rs  lib.rs  sequence.rs  time.rs
units/src/amount/: error.rs  serde.rs  tests.rs
units/src/fee_rate/: mod.rs
units/src/locktime/: relative.rs
units/tests/: encoding.rs  serde.rs
