[package]
name = "bitcoin-io"
version = "0.2.0"
authors = ["Matt Corallo <birchneutea@mattcorallo.com>"]
license = "CC0-1.0"
repository = "https://github.com/rust-bitcoin/rust-bitcoin"
documentation = "https://docs.rs/bitcoin-io/"
description = "Simple I/O traits for no-std (and std) environments"
categories = ["no-std"]
keywords = [ "io", "no-std" ]
readme = "README.md"
edition = "2021"
rust-version = "1.63.0"
exclude = ["tests", "contrib"]

[features]
default = ["std"]
std = ["alloc", "hashes?/std", "hex?/std"]
alloc = ["hashes?/alloc", "hex?/alloc"]

[dependencies]
internals = { package = "bitcoin-internals", version = "0.4.0" }

hashes = { package = "bitcoin_hashes", version = "0.16.0", default-features = false, optional = true }
hex = { package = "hex-conservative", version = "0.3.0", default-features = false, optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unexpected_cfgs = { level = "deny" }
